--- a/src/views/realtimeproducts.handlebars
+++ b/src/views/realtimeproducts.handlebars
@@ -1,6 +1,6 @@
 <div>
 
-  <h2>Lista de Productos</h2>
+  <h1>Product List</h1>
   <ul id="productList"></ul>
   <hr />
 
@@ -44,3 +44,8 @@
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/main.js"></script>
+
+
+
+
+
