Implementacion de Login

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,3 +1,9 @@
+<h1>Home</h1>
+<br/>
+<a href='/login'>Log in</a>
+<a href='/register'>Register</a>
+
+<!--
 <h1>All Products</h1>
 {{#each products}}
   <p>
@@ -63,7 +69,5 @@ nextLink:
     <a href="{{nextLink}}">Next</a>
   {{/if}}
 </div>
-
-
-
+-->
 
