Hasheo de contrasena con bcrypt - passport- Autenticacion con GitHub

--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -2,23 +2,23 @@
 
 <p>
     First Name:
-    {{firstName}} 
+    {{user.firstName}} 
 </p>
 <p>
     Last Name:
-    {{lastName}}
+    {{user.lastName}}
 </p>
 <p>
     Email:
-    {{email}}
+    {{user.email}}
 </p>
 <p>
     Age:
-    {{age}}
+    {{user.age}}
 </p>
 <p>
     Admin:
-    {{isAdmin}}
+    {{user.isAdmin}}
 </p>
 
 <br/>
