--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,6 +1,6 @@
 <div>
-  <h2>Welcome, {{email}}</h2>
-  {{#if isAdmin}}
+  <h2>Welcome, {{user.email}}</h2>
+  {{#if user.isAdmin}}
       <p>Role: Admin</p>
   {{else}}
     <p>Role: User</p>
