--- a/src/views/menu.handlebars
+++ b/src/views/menu.handlebars
@@ -7,6 +7,9 @@
       <a class="navbar-brand text-white" href="#">Mega-Friday</a>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
+          <a href="/purchase/" class="btn btn-outline-light ms-3"><i class="bi bi-bag-check me-2"></i>My cart</a>
+        </li>
+        <li class="nav-item">
           <a href="/api/sessions/current" class="btn btn-outline-light ms-3 me-3"><i class="bi bi-person-circle"></i></a>
         </li>
           <li class="nav-item">
@@ -30,8 +33,11 @@
 <div class="container buttonMenu mt-4">
   <div class="row">
     <div class="col d-flex align-items-center justify-content-center">
-        <a href="/crud-products" class="btn btn-outline-light btn-lg mx-2">CRUD PRODUCTS</a>
-        <a href="#" class="btn btn-outline-light btn-lg mx-2">CRUD USERS</a>
+        <a href="/products" class="btn btn-outline-light btn-lg mx-2">PRODUCTS</a>
+        <a href="/realtimeproducts" class="btn btn-outline-light btn-lg mx-2">PRODUCTS SOCKET</a>
+        <a href="/chat" class="btn btn-outline-light btn-lg mx-2">CHATS</a>
+        <a href="/admin" class="btn btn-outline-light btn-lg mx-2">ADMINISTRATOR</a>
     </div>
   </div>
 </div>
+
