--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,4 +1,4 @@
-<main>
+<main class="allProducts">
 	{{#if user.firstName}}
 		<div class="flex-row text-end mt-3 ms-3" style="width: 99%;">
 			<div class="d-flex justify-content-end align-items-center">
