--- a/src/views/realtimeproducts.handlebars
+++ b/src/views/realtimeproducts.handlebars
@@ -1,4 +1,4 @@
-<div>
+<div class="productListSocket">
 
   <h1>Product List</h1>
   <ul id="productList"></ul>
@@ -29,7 +29,7 @@
     <input class="form-control" type="file" name="thumbnail" id="formFile"> 
   </div>
   <div class="col-12">
-    <button type="submit" class="btn btn-primary">Add Product</button>
+    <button type="submit" class="btn btn-primary btn-addProductSocket">Add Product</button>
   </div>
 </form>
 
