--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -4,7 +4,6 @@
 			<div class="bg-image" style="filter: blur(5px);"></div>
 
 			<div class="contenedorTituloPrincipal">
-				<a href="/"><img src="/images/logo.png" class="logo" alt="logo" style="width: 96px;" /></a>
 				<div
 					class="d-flex justify-content-center align-items-center flex-column bg-dark"
 					style="border-radius: 20px 20px 20px 20px"
@@ -23,26 +22,13 @@
 							>
 								<div class="text-center text-white mb-3">
 									<p>Register with:</p>
-									<button type="button" class="btn btn-link btn-floating mx-1">
-										<i class="bi bi-facebook"></i>
-									</button>
-
-									<button type="button" class="btn btn-link btn-floating mx-1">
-										<i class="bi bi-google"></i>
-									</button>
-
-									<button type="button" class="btn btn-link btn-floating mx-1">
-										<i class="bi bi-twitter"></i>
-									</button>
-
+	
 									<button type="button" class="btn btn-link btn-floating mx-1">
 										<a href="/api/sessions/github"><i
 												class="bi bi-github"
 											></i></a>
 									</button>
 								</div>
-
-								<p class="text-center text-white">or:</p>
 
 								<div class="mb-4">
 									<div class="form-floating mb-3">
@@ -138,7 +124,7 @@
 												>Remember me</label>
 											</div>
 											<div class="row w-100 text-center">
-												<a href="#!">Forgot password?</a>
+												<a href="/recover-mail">Forgot password?</a>
 											</div>
 											<div class="row">
 												<p>Are you already a member?
