--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,28 +1,28 @@
-<div class="container-fluid">
-	<div class="row">
-		<div class="col g-0">
-			<div class="bg-image"></div>
-
-			<div class="contenedorTituloPrincipal">
-				<a href="/"><img
-						src="/images/logo.png"
-						alt="logo"
-						style="width: 200px;"
-					/></a>
-				<h2 class="tituloPrincipal mt-2">Mega-Friday</h2>
-				<div class="mt-3">
-					<a href="/login" class="btn btn-outline-light btnLogin">
-						<i class="bi bi-person-circle me-2"></i>Log in
-					</a>
-					<a
-						href="/register"
-						class="btn btn-light ms-2 me-3 btnRegister"
-					>
-						<i class="bi bi-person-video2 me-2"></i>Register
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card border-light">
+        <div class="card-header">
+            <h1 class="text-center">Welcome to Mega-Friday</h1>
+        </div>
+        <div class="card-body text-center">
+            <img src="/images/logo.png" alt="Logo" width="100" height="100">
+            <p class="mt-3">Please select an option:</p>
+            <div class="mt-3">
+              <a href="/login" class="btn btn-outline-dark btnLogin">
+                <i class="bi bi-person-circle me-2"></i>Log in
+              </a>
+              <a
+                href="/register"
+                class="btn btn-outline-dark ms-2 me-3 btnRegister"
+              >
+                <i class="bi bi-person-video2 me-2"></i>Register
+              </a>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
 
