--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,117 +1,52 @@
-<div class="container-fluid">
-	<div class="row">
-		<div class="col g-0">
-			<div class="bg-image" style="filter: blur(5px);"></div>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <form action="/api/sessions/login" method="post">
+        <div class="text-center text-white mb-3">
+          <p>Sign in with:</p>
+          <button type="button" class="btn btn-link btn-floating mx-1">
+            <a href="/api/sessions/github"><i class="bi bi-github"></i></a>
+          </button>
+        </div>
 
-			<div class="contenedorTituloPrincipal">
-				<a href="/"><img src="/images/logo.png" class="logo" alt="logo" style="width: 96px;" /></a>
-				<div
-					class="d-flex justify-content-center align-items-center flex-column bg-dark mt-3"
-					style="border-radius: 20px 20px 20px 20px"
-				>
-					<div class="tab-content">
-						<div
-							class="tab-pane fade show active"
-							id="pills-login"
-							role="tabpanel"
-							aria-labelledby="tab-login"
-						>
-							<form
-								action="/api/sessions/login"
-								method="post"
-								style="width: 300px; padding: 10px;"
-							>
-								<div class="text-center text-white mb-3">
-									<p>Sign in with:</p>
-									<button type="button" class="btn btn-link btn-floating mx-1">
-										<i class="bi bi-facebook"></i>
-									</button>
+        <div class="form-floating mb-3">
+          <input
+            type="email"
+            class="form-control border-0 border-bottom border-dark"
+            id="inputEmailRegister"
+            name="email"
+            placeholder="Enter email"
+          />
+          <label for="input-passwordLogin"><i class="bi bi-envelope-at me-1"></i>Email</label>
+        </div>
 
-									<button type="button" class="btn btn-link btn-floating mx-1">
-										<i class="bi bi-google"></i>
-									</button>
+        <div class="form-floating">
+          <input
+            type="password"
+            class="form-control border-0 border-bottom border-dark"
+            id="inputPasswordLogin"
+            name="password"
+            placeholder="Password"
+          />
+          <label for="input-passwordLogin"><i class="bi bi-eye-slash me-1"></i>Password</label>
+        </div>
+								
+        <button type="submit" class="btn btn-primary btn-block mb-4 w-100">Sign in</button>
 
-									<button type="button" class="btn btn-link btn-floating mx-1">
-										<i class="bi bi-twitter"></i>
-									</button>
+        <div class="form-check w-100 d-flex justify-content-center align-items-center text-white mb-3">
+          <input type="checkbox" class="form-check-input" id="remember" checked>
+          <label class="form-check-label" for="remember">Remember me</label>
+        </div>
 
-									<button type="button" class="btn btn-link btn-floating mx-1">
-										<a href="/api/sessions/github"><i
-												class="bi bi-github"
-											></i></a>
-									</button>
-								</div>
+        <div class="mt-3 text-center text-white mb-3">
+            <a href="/recover-mail">Forgot password?</a>
+        </div>
 
-								<p class="text-center text-white">or:</p>
+        <div class="mt-3 text-center text-white mb-3">
+            <p>Not a member?<a href="/register"> Register</a></p>
+        </div>
 
-								<div class="mb-4">
-									<div class="form-floating mb-3">
-										<input
-											type="email"
-											class="form-control border-0 border-bottom border-dark"
-											id="inputEmailRegister"
-											name="email"
-											placeholder="Password"
-										/>
-										<label for="input-passwordLogin"><i
-												class="bi bi-envelope-at me-1"
-											></i>Email</label>
-									</div>
-
-									<div class="form-floating">
-										<input
-											type="password"
-											class="form-control border-0 border-bottom border-dark"
-											id="inputPasswordLogin"
-											name="password"
-											placeholder="Password"
-										/>
-										<label for="input-passwordLogin"><i
-												class="bi bi-eye-slash me-1"
-											></i>Password</label>
-									</div>
-									<div
-										class="w-100 mt-4 d-flex justify-content-center align-items-center flex-column text-white"
-									>
-										<button
-											type="submit"
-											class="btn btn-primary btn-block mb-4 w-100"
-										>
-											Sign in
-										</button>
-										<div
-											class="w-100 d-flex justify-content-between align-items-center flex-column gap-3"
-										>
-											<div
-												class="form-check w-100 d-flex justify-content-center align-items-center"
-											>
-												<input
-													class="form-check-input me-2"
-													type="checkbox"
-													value=""
-													id="loginCheck"
-													checked
-												/>
-												<label
-													class="form-check-label"
-													for="loginCheck"
-												>Remember me</label>
-											</div>
-											<div class="row w-100 text-center">
-												<a href="#!">Forgot password?</a>
-											</div>
-											<div class="row">
-												<p>Not a member?
-													<a href="/register">Register</a></p>
-											</div>
-										</div>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+      </form>
+    </div>
+  </div>
 </div>
