--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,26 +1,29 @@
-<h1>Profile</h1>
+<div class="profile">
 
-<p>
-    First Name:
-    {{user.firstName}} 
-</p>
-<p>
-    Last Name:
-    {{user.lastName}}
-</p>
-<p>
-    Email:
-    {{user.email}}
-</p>
-<p>
-    Age:
-    {{user.age}}
-</p>
-<p>
-    Rol:
-    {{user.rol}}
-</p>
+    <h1>Profile</h1>
 
-<br/>
+    <p>
+        First Name:
+        {{user.firstName}} 
+    </p>
+    <p>
+        Last Name:
+        {{user.lastName}}
+    </p>
+    <p>
+        Email:
+        {{user.email}}
+    </p>
+    <p>
+        Age:
+        {{user.age}}
+    </p>
+    <p>
+        Rol:
+        {{user.rol}}
+    </p>
 
-<a href='/logout'>Log out</a>
+    <br/>
+
+    <a href='/logout'>Log out</a>
+</div>
