--- a/src/views/menu.handlebars
+++ b/src/views/menu.handlebars
@@ -1,16 +1,16 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary mt-2">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
       <a class="navbar-brand text-white" href="#">Mega-Friday</a>
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a href="/purchase/" class="btn btn-outline-light ms-3"><i class="bi bi-bag-check me-2"></i>My cart</a>
+          <a href="/purchase" class="btn btn-outline-light ms-3"><i class="bi bi-bag-check me-2"></i>My cart</a>
         </li>
         <li class="nav-item">
-          <a href="/api/sessions/current" class="btn btn-outline-light ms-3 me-3"><i class="bi bi-person-circle"></i></a>
+          <a href="/profile" class="btn btn-outline-light ms-3 me-3"><i class="bi bi-person-circle"></i></a>
         </li>
           <li class="nav-item">
           <a href="/logout" class="btn btn-success ms-1 me-4"><i class="bi bi-box-arrow-left me-2"></i>Logout</a>
@@ -36,8 +36,11 @@
         <a href="/products" class="btn btn-outline-light btn-lg mx-2">PRODUCTS</a>
         <a href="/realtimeproducts" class="btn btn-outline-light btn-lg mx-2">PRODUCTS SOCKET</a>
         <a href="/chat" class="btn btn-outline-light btn-lg mx-2">CHATS</a>
+        <a href="/api/docs" class="btn btn-outline-light btn-lg mx-2">DOCUMENTATION</a>
         <a href="/admin" class="btn btn-outline-light btn-lg mx-2">ADMINISTRATOR</a>
     </div>
   </div>
 </div>
+
+
 
