--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary mt-2">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
       <a class="navbar-brand text-white" href="#">Mega-Friday</a>
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a href="/api/sessions/current" class="btn btn-outline-light ms-3 me-3"><i class="bi bi-person-circle"></i></a>
         </li>
@@ -31,7 +31,8 @@
   <div class="row">
     <div class="col d-flex align-items-center justify-content-center">
         <a href="/crud-products" class="btn btn-outline-light btn-lg mx-2">CRUD PRODUCTS</a>
-        <a href="#" class="btn btn-outline-light btn-lg mx-2">CRUD USERS</a>
+        <a href="/api/products/mockingproducts" class="btn btn-outline-light btn-lg mx-2">MOCKING PRODUCTS</a>
+        <a href="/api/loggerTest" class="btn btn-outline-light btn-lg mx-2">LOGGER TEST</a>
     </div>
   </div>
 </div>
