--- a/src/views/purchases.handlebars
+++ b/src/views/purchases.handlebars
@@ -1,3 +1,38 @@
-<h1>En desarrollo...</h1>
+<nav class="navbar navbar-expand-lg bg-body-tertiary mt-2">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand text-white" href="#">Mega-Friday</a>
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a href="/logout" class="btn btn-success ms-1 me-4"><i class="bi bi-box-arrow-left me-2"></i>Logout</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container mx-auto col-md-5 mt-2 text-white">
+  <h1 class="mb-3">Purchase ticket</h1>
+  <p>Code: {{code}}</p>
+  <p>Date of purchase: {{purchase_datetime}}</p>
+  <p>Buyer: {{purchaser}}</p>
+  <p>Total: $ {{amount}}</p>
+  
+  {{#if products}}
+    <h2 class="mb-3">Products</h2>
+    <ul>
+      {{#each products}}
+        <li>Product Id: {{this.productId}}</li>
+        <li>Quantity: {{this.quantity}}</li>
+      {{/each}}
+    </ul>
+  {{/if}}
+</div>
+
+
+
 
 
