--- a/src/views/purchases.handlebars
+++ b/src/views/purchases.handlebars
@@ -14,14 +14,17 @@
   </div>
 </nav>
 
-<div class="container mx-auto col-md-5 mt-2 text-white">
-  <h1 class="mb-3">Purchase ticket</h1>
-  <p>Code: {{code}}</p>
-  <p>Date of purchase: {{purchase_datetime}}</p>
-  <p>Buyer: {{purchaser}}</p>
-  <p>Total: $ {{amount}}</p>
-  
+<div class="container mx-auto col-md-5 mt-2 text-white"> 
+
   {{#if products}}
+
+    <h1 class="mb-3">Purchase ticket</h1>
+    
+    <p>Code: {{code}}</p>
+    <p>Date of purchase: {{purchase_datetime}}</p>
+    <p>Buyer: {{purchaser}}</p>
+    <p>Total: $ {{amount}}</p>
+
     <h2 class="mb-3">Products</h2>
     <ul>
       {{#each products}}
@@ -29,6 +32,8 @@
         <li>Quantity: {{this.quantity}}</li>
       {{/each}}
     </ul>
+  {{else}}
+    <h3>{{message}}</h3>
   {{/if}}
 </div>
 
