Endpoint  todos los usuarios con datos basicos y vista hdb  de usuarios para modificar rol y eliminar

--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -31,6 +31,7 @@
   <div class="row">
     <div class="col d-flex align-items-center justify-content-center">
         <a href="/crud-products" class="btn btn-outline-light btn-lg mx-2">CRUD PRODUCTS</a>
+        <a href="/crud-users" class="btn btn-outline-light btn-lg mx-2">CRUD USERS</a>
         <a href="/api/products/mockingproducts" class="btn btn-outline-light btn-lg mx-2">MOCKING PRODUCTS</a>
         <a href="/api/loggerTest" class="btn btn-outline-light btn-lg mx-2">LOGGER TEST</a>
     </div>
